https-springboot/gke/kube/spring-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
spec:
  type: NodePort
  selector:
    app: spring-app
  ports:
  - protocol: TCP
    port: 9000
    targetPort: 8081
