https-springboot/gke/kube/spring-app-ingress-host.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-app-ingress
  namespace: spring
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
spec:
  tls:
  - hosts:
    - demo.app
  rules:
  - host: demo.app
    http:
      paths:
      - path: /*
        backend:
          serviceName: spring-app-service
          servicePort: 9000
